fix: fix number overflows in verify

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,3 @@
   background-color: #888;
   border-radius: 10px;
 }
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
